Refactored matching to allow scaled matching for payrate, distance